Don't instantiate new java.lang.Number instances.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@586849 13f79535-47bb-0310-9956-ffa450edef68